# rag-qa-workshop

./: .env-template  .gitignore  README.md  pyproject.toml
day_1/: app.py
day_1/notebooks/: 0_model_prompting.ipynb  1_document_index.ipynb  2_question_and_answer.ipynb  3_summary.ipynb  parser.py
day_2/: .gitignore  evaluation.ipynb  evaluation_empty.ipynb  pyproject.toml  text_control.ipynb
day_2/src/rewe_workshop/: evaluation.py  repositories.py
day_2/src/workshop/: evaluation.py  repositories.py
example_documents/: Erfundene-Programmiersprache.docx  Plyscraper.txt  zehn_euro_gehen_auf_reisen.txt
